# Coursework_5

./: .gitignore  pyproject.toml
sql/: DBmanager_class.py  config.py  create_db.py
src/: company_id.py  hh_api_class.py  utils.py
